exports[`App snapshots 1`] = `
<div
  className="page">
  <div
    className="interactions">
    <form
      onSubmit={[Function]}>
      <input
        onChange={[Function]}
        type="text"
        value="redux" />
      <button
        type="submit">
        Search
      </button>
    </form>
  </div>
  <div
    className="table">
    <div
      className="table-header">
      <span
        style={
          Object {
            "width": "40%",
          }
        }>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button">
          Title
        </button>
      </span>
      <span
        style={
          Object {
            "width": "30%",
          }
        }>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button">
          Author
        </button>
      </span>
      <span
        style={
          Object {
            "width": "15%",
          }
        }>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button">
          Comments
        </button>
      </span>
      <span
        style={
          Object {
            "width": "15%",
          }
        }>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button">
          Points
        </button>
      </span>
    </div>
  </div>
  <div
    className="interactions">
    <div>
      Loading...
    </div>
  </div>
</div>
`;

exports[`Button snapshot 1`] = `
<button
  onClick={undefined}
  type="button">
  Give me more
</button>
`;

exports[`ButtonWithLoading snapshot isLoading 1`] = `
<div>
  Loading...
</div>
`;

exports[`ButtonWithLoading snapshot notLoading 1`] = `
<button
  onClick={undefined}
  type="button" />
`;

exports[`Loading snapshot 1`] = `
<div>
  Loading...
</div>
`;

exports[`Search snapshots 1`] = `
<form
  onSubmit={undefined}>
  <input
    onChange={undefined}
    type="text"
    value={undefined} />
  <button
    type="submit">
    Search
  </button>
</form>
`;

exports[`Table snapshot 1`] = `
<div
  className="table">
  <div
    className="table-header">
    <span
      style={
        Object {
          "width": "40%",
        }
      }>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Title
      </button>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Author
      </button>
    </span>
    <span
      style={
        Object {
          "width": "15%",
        }
      }>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Comments
      </button>
    </span>
    <span
      style={
        Object {
          "width": "15%",
        }
      }>
      <button
        className="button-inline"
        onClick={[Function]}
        type="button">
        Points
      </button>
    </span>
  </div>
  <div
    className="table-row">
    <span
      style={
        Object {
          "width": "40%",
        }
      }>
      <a
        href={undefined}>
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }>
      1
    </span>
    <span
      style={
        Object {
          "width": "15%",
        }
      }>
      1
    </span>
    <span
      style={
        Object {
          "width": "15%",
        }
      }>
      2
    </span>
  </div>
  <div
    className="table-row">
    <span
      style={
        Object {
          "width": "40%",
        }
      }>
      <a
        href={undefined}>
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }>
      2
    </span>
    <span
      style={
        Object {
          "width": "15%",
        }
      }>
      1
    </span>
    <span
      style={
        Object {
          "width": "15%",
        }
      }>
      2
    </span>
  </div>
</div>
`;
